data/derived/comb/progs/unify/prog0010.ml.out
Characters 53-54:
  let rec additivePersistence n = additivePersistence (n, 0);;
                                                       ^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
